# VisionPilot

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
adapter/in/: CMakeLists.txt
adapter/in/frame_loader/: CMakeLists.txt
adapter/in/frame_loader/gtest/: test_video_loader.cpp
adapter/in/frame_loader/src/: video_loader_impl.cpp  video_loader_impl.hpp
application/: CMakeLists.txt
application/domain/model/include/: image.hpp
application/port/in/: CMakeLists.txt
application/port/in/include/: frame_receive_usecase.hpp
assembly/src/: vp_assembly.cpp
cmake/: ClangTidyFlags.cmake
config/: CMakeLists.txt
config/include/: assembly_config.hpp  config_loader.hpp  video_loader_config.hpp
config/src/: config_loader.cpp
gaia/: .gitignore  CMakeLists.txt  README.md  build.sh
gaia/ZoneDetect/: demo  demo.c
gaia/ZoneDetect/database/builder/: builder  makedb.sh
gaia/gbench/: bench_lru_cache.cpp  bench_main.cpp  bench_octstr.cpp
gaia/gtest/: small_vector.hpp  test_dir.cpp  test_geography.cpp  test_lru_cache.cpp  test_macro.cpp  test_octstr.cpp  test_scope_guard.cpp  test_string_util.cpp  test_time.cpp  test_zip.cpp
gaia/gtest/standard/ieee1609.2.1/: test_time.cpp
gaia/gtest/standard/ydt3957/: test_time.cpp
gaia/include/: gaia_cpu_affinity.hpp  gaia_dir.hpp  gaia_dir_man.hpp  gaia_exception.hpp  gaia_geography.hpp  gaia_json_util.hpp  gaia_key_db.hpp  gaia_log.hpp  gaia_lru_cache.hpp  gaia_macro.hpp  gaia_octstr.hpp  gaia_scope_guard.hpp  gaia_string_util.hpp  gaia_time.hpp  gaia_zip_manager.hpp
gaia/src/: gaia_dir.cpp  gaia_dir_man.cpp  gaia_geography.cpp  gaia_json_util.cpp  gaia_key_db.cpp  gaia_log.cpp  gaia_macro.cpp  gaia_octstr.cpp  gaia_string_util.cpp  gaia_time.cpp  gaia_zip_manager.cpp
gaia/src/standard/ieee1609.2.1/: gaia_time.cpp
gaia/src/standard/ydt3957/: gaia_time.cpp
infrastructure/: CMakeLists.txt
infrastructure/event/: CMakeLists.txt
infrastructure/event/include/: event_queue.hpp  event_router.hpp
infrastructure/event/src/: event_router.cpp
vision_pilot/: CMakeLists.txt  build.sh  main.cpp
vision_pilot/adapter/in/frame_loader/: CMakeLists.txt
vision_pilot/adapter/in/frame_loader/gtest/: test_video_loader.cpp
vision_pilot/adapter/in/frame_loader/include/: video_loader.hpp
vision_pilot/adapter/in/frame_loader/src/: video_loader.cpp  video_loader_impl.cpp  video_loader_impl.hpp
vision_pilot/application/: CMakeLists.txt
vision_pilot/application/domain/model/: CMakeLists.txt
vision_pilot/application/domain/model/include/: detection.hpp  event.hpp  image.hpp  pose.hpp
vision_pilot/application/port/: CMakeLists.txt
vision_pilot/application/port/in/include/: frame_receive_usecase.hpp
vision_pilot/application/service/: CMakeLists.txt
vision_pilot/application/service/gtest/: test_main.cpp  test_vp_service.cpp  test_vp_service_detection.cpp  test_vp_service_stereo.cpp
vision_pilot/application/service/include/: vision_pilot_service.hpp
vision_pilot/application/service/src/: vision_pilot_service.cpp  vision_pilot_service_impl.cpp  vision_pilot_service_impl.hpp
vision_pilot/assembly/: CMakeLists.txt
vision_pilot/assembly/include/: assembly.hpp  vp_assembly.hpp
vision_pilot/assembly/src/: assembly.cpp  assembly_impl.cpp  assembly_impl.hpp
vision_pilot/config/include/: assembly_config.hpp  config_loader.hpp  video_loader_config.hpp  vslam_config.hpp  yolov8_config.hpp
vision_pilot/config/src/: config_loader.cpp
vision_pilot/gaia/: CMakeLists.txt
vision_pilot/gaia/ZoneDetect/database/builder/: builder.cpp
vision_pilot/gaia/cmake/patch/leveldb/: CMakeLists.txt
vision_pilot/gaia/gbench/: bench_lru_cache.cpp  bench_octstr.cpp
vision_pilot/gaia/gtest/: test_geography.cpp  test_lru_cache.cpp  test_octstr.cpp  test_time.cpp
vision_pilot/gaia/gtest/standard/ydt3957/: test_time.cpp
vision_pilot/gaia/include/: gaia_dir.hpp  gaia_dir_man.hpp  gaia_exception.hpp  gaia_log.hpp  gaia_lru_cache.hpp  gaia_octstr.hpp  gaia_scope_guard.hpp  gaia_string_util.hpp  gaia_time.hpp  gaia_zip_manager.hpp
vision_pilot/gaia/src/: gaia_dir.cpp  gaia_dir_man.cpp  gaia_key_db.cpp  gaia_octstr.cpp  gaia_scope_guard.cpp  gaia_zip_manager.cpp
vision_pilot/gaia/src/standard/ieee1609.2.1/: gaia_time.cpp
vision_pilot/infrastructure/event/gtest/: test_event_router.cpp
vision_pilot/infrastructure/event/src/: event_router.cpp
